--- a/SAAOSX/TextEdition/TextEdition.storyboard
+++ b/SAAOSX/TextEdition/TextEdition.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -136,6 +136,20 @@
                                         </connections>
                                     </searchField>
                                 </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="B30DAE7D-35C3-4473-B10D-475BAC7AA3FE" label="Map View" paletteLabel="Map View" sizingBehavior="auto" id="FJh-SI-LKm">
+                                    <nil key="toolTip"/>
+                                    <button key="view" verticalHuggingPriority="750" id="8Vb-bM-8ib">
+                                        <rect key="frame" x="0.0" y="14" width="71" height="25"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <buttonCell key="cell" type="roundTextured" title="MapView" bezelStyle="texturedRounded" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="WOF-T4-y4W">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                    </button>
+                                    <connections>
+                                        <action selector="showMapView:" target="a8r-0S-bul" id="a6G-Du-DJ0"/>
+                                    </connections>
+                                </toolbarItem>
                             </allowedToolbarItems>
                             <defaultToolbarItems>
                                 <toolbarItem reference="daP-HU-Mm3"/>
@@ -146,6 +160,7 @@
                                 <toolbarItem reference="cye-Ov-dNb"/>
                                 <toolbarItem reference="BRf-Hu-loj"/>
                                 <toolbarItem reference="5tZ-xd-zmf"/>
+                                <toolbarItem reference="FJh-SI-LKm"/>
                             </defaultToolbarItems>
                         </toolbar>
                         <connections>
@@ -898,7 +913,7 @@ DQ
         <image name="NSBookmarksTemplate" width="17" height="18"/>
         <image name="NSGoBackTemplate" width="9" height="12"/>
         <image name="NSGoForwardTemplate" width="9" height="12"/>
-        <image name="NSInfo" width="128" height="128"/>
+        <image name="NSInfo" width="32" height="32"/>
         <image name="NSListViewTemplate" width="14" height="10"/>
         <image name="NSTouchBarOpenInBrowserTemplate" width="18" height="30"/>
     </resources>
