--- a/SAAOSX/Notes/AnnotationItem.xib
+++ b/SAAOSX/Notes/AnnotationItem.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="Annotation" customModule="SAAOSX" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="AnnotationItem" customModule="SAAOSX" customModuleProvider="target">
             <connections>
                 <outlet property="annotationView" destination="cuD-8P-fvk" id="q3W-5n-PsK"/>
                 <outlet property="contextLabel" destination="DOP-8n-OVN" id="By8-gU-NQK"/>
@@ -24,26 +25,26 @@
             <subviews>
                 <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shH-ME-kgO">
                     <rect key="frame" x="20" y="36" width="220" height="130"/>
-                    <clipView key="contentView" id="0Ai-jh-M98">
+                    <clipView key="contentView" drawsBackground="NO" id="0Ai-jh-M98">
                         <rect key="frame" x="1" y="1" width="218" height="128"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="cuD-8P-fvk">
                                 <rect key="frame" x="0.0" y="0.0" width="218" height="128"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <size key="minSize" width="218" height="128"/>
                                 <size key="maxSize" width="463" height="10000000"/>
-                                <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </clipView>
-                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="oaA-xM-zNL">
+                    <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="oaA-xM-zNL">
                         <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="ZQO-hP-HV5">
+                    <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="ZQO-hP-HV5">
                         <rect key="frame" x="203" y="1" width="16" height="128"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
@@ -119,7 +120,7 @@
             </constraints>
             <point key="canvasLocation" x="-425" y="-31"/>
         </customView>
-        <collectionViewItem id="SXZ-kb-bkn" customClass="Annotation" customModule="SAAOSX" customModuleProvider="target">
+        <collectionViewItem id="SXZ-kb-bkn" customClass="AnnotationItem" customModule="SAAOSX" customModuleProvider="target">
             <connections>
                 <outlet property="annotationView" destination="cuD-8P-fvk" id="BjA-m4-x0w"/>
                 <outlet property="contextLabel" destination="DOP-8n-OVN" id="7WP-Zi-KGp"/>
